--- a/public/frontend-assets/css/style.css
+++ b/public/frontend-assets/css/style.css
@@ -1481,6 +1481,8 @@ ul,li{
 	line-height:1.6em;
 	color:#ffffff;
 	font-size:16px;
+	margin-top: 20px !important;
+	margin-bottom: 20px !important;
 }
 
 .main-slider .offer{
