--- a/public/frontend-assets/css/responsive.css
+++ b/public/frontend-assets/css/responsive.css
@@ -628,6 +628,29 @@
 	.tp-banner{
 		height: 400px !important;
 	}
+	.shop-section.shop-page {
+    	padding: 0px 0px;
+	}
+	.sidebar-filter{
+		display: none;
+	}
+	.shop-item .inner-box{
+		padding: 1rem 0rem;
+	    display: flex;
+	    box-shadow: 0 0.2rem 0.4rem rgb(0 0 0 / 16%);
+	    border-radius: 1.2rem;
+	}
+	.shop-item .inner-box .image-box {
+	    width: 25%;
+	    position: relative;
+	    background-color: #fff;
+	    align-items: center;
+	    display: flex;
+	}
+	.shop-item .inner-box .lower-content {
+   		width: 75%;
+   		padding-top: 0;
+	}
 }
 
 @media only screen and (max-width: 599px){
