--- a/public/frontend-assets/css/responsive.css
+++ b/public/frontend-assets/css/responsive.css
@@ -628,6 +628,13 @@
 	.tp-banner{
 		height: 400px !important;
 	}
+
+	.bill-box{
+		padding: 10px 10px;
+	}
+	.bill-box img {
+    	margin-top: 1.5em;
+	}
 	.shop-section.shop-page {
     	padding: 0px 0px;
 	}
